removed contact on mobile (band-aid fix, should develop it for mobile some time)

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -113,3 +113,7 @@ h4 {
 .designs-desktop {
     display: none;
 }
+
+.contact-cards-container {
+    display: none;
+}
